--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/link.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/resp.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
